lib/src/compiler/tests/testdata/errors/113.out
error[E006]: invalid modifier combination: `xor` `nocase`
 --> line:3:16
  |
3 |     $a = "foo" xor nocase
  |                ^^^ `xor` modifier used here
  |                    ^^^^^^ `nocase` modifier used here
  |
  = note: these two modifiers can't be used together